<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <View style="@style/line" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/shape_rank_other_bg"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/api_key"
            android:textColor="@color/sub_text_color"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/shape_rank_other_bg"
            android:gravity="center"
            android:text="2"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="@string/api_authorization"
            android:textColor="@color/sub_text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        style="@style/BindItemStyle"
        android:layout_marginTop="35dp">

        <EditText
            android:id="@+id/et_api_key"
            style="@style/BindEditTextStyle"
            android:hint="@string/input_api_key" />

        <ImageView
            android:id="@+id/iv_clear_api"
            style="@style/BindCloseStyle" />

    </LinearLayout>

    <View
        style="@style/line"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        style="@style/BindItemStyle"
        android:layout_marginTop="30dp">

        <EditText
            android:id="@+id/et_secret_key"
            style="@style/BindEditTextStyle"
            android:hint="@string/input_secret_key" />

        <ImageView
            android:id="@+id/iv_secret_api"
            style="@style/BindCloseStyle" />
    </LinearLayout>

    <View
        style="@style/line"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/ll_passphrase_key"
        style="@style/BindItemStyle"
        android:layout_marginTop="30dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_passphrase_key"
            style="@style/BindEditTextStyle"
            android:hint="@string/input_passphrase_key" />

        <ImageView
            android:id="@+id/iv_passphrase_api"
            style="@style/BindCloseStyle" />
    </LinearLayout>

    <View
        android:id="@+id/v_passphrase_key_divider"
        style="@style/line"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/scan_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/scan_qr_code"
            android:textColor="@color/blue"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_bind"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/selector_blue_round_bg"
        android:gravity="center"
        android:text="@string/binding"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>