<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/ll_item"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/ranking_name"
            android:textColor="@color/light_blue"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_value"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="right"
            android:paddingRight="25dp"
            android:text="@string/latest_price_usd"
            android:textColor="@color/light_blue"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_range"
            android:layout_width="62dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/quote_change"
            android:textColor="@color/light_blue"
            android:textSize="12sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider_color"
        android:layout_below="@id/ll_item"
        />

</RelativeLayout>
