<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="60dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="16dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:id="@+id/tv_coin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="BTC"
                android:textColor="@color/time_blue"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/tv_coin"
                android:gravity="center_vertical"
                android:text="当周-0101"
                android:textColor="@color/time_blue"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_lever"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/tv_time"
                android:gravity="center_vertical"
                android:text="10×"
                android:textColor="@color/time_blue"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical"
                android:text="@string/limit_order"
                android:textColor="@color/time_blue"
                android:textSize="12dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_trade"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_red_round_bg_light"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:gravity="center_horizontal"
                android:text="@string/commission_price_usd"
                android:textColor="@color/time_blue"
                android:textSize="12dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_prise"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal|bottom"
                    android:text="5405.51 "
                    android:textColor="@color/confirm_red"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tv_number"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@id/tv_prise"
                    android:gravity="bottom"
                    android:text="× 1"
                    android:textColor="@color/confirm_red"
                    android:textSize="11dp" />
            </RelativeLayout>

            <TextView
                style="@style/line"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:id="@+id/tv_trade_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="卖出平多"
                android:textColor="@color/confirm_red"
                android:textSize="20dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_next_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/dialog_trade_confirm"
            android:text="@string/no_show_next"
            android:textColor="@color/time_blue"
            android:textSize="12dp" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:background="@drawable/selector_blue_round_bg"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="14dp" />
    </LinearLayout>
</RelativeLayout>